src/objects/TPTO_PTO_Request__c.object
<CustomObject>
    <fields>
        <fullName>Absence_Comments__c</fullName>
        <label>Absence Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PTO_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName == &apos;Planned&apos;,  NOW() + 16,  NOW()  )</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PTO_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PTO_Days__c</fullName>
        <formula>(End_Date__c - Start_Date__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total No of PTO days</inlineHelpText>
        <label>Total # PTO Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName == &apos;Planned&apos;,  NOW() + 14,  NOW() )</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Needs discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_absence__c</fullName>
        <label>Type of absence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sick leave</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PTO Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTO-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTO Requests</pluralLabel>
    <recordTypes>
        <fullName>Emergency</fullName>
        <active>true</active>
        <description>Choose Emergency for unplanned leaves of short notice (Less than 2 weeks of notice)</description>
        <label>Emergency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planned</fullName>
        <active>true</active>
        <description>Choose Planned PTO for planned timeoff for longer period</description>
        <label>Planned</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Emergency_Start_Date_rule</fullName>
        <active>true</active>
        <description>You cannot submit a emergency leave after two weeks from Start date</description>
        <errorConditionFormula>IF(RecordType.DeveloperName == &apos;Emergency&apos; &amp;&amp;  Start_Date__c &gt; TODAY() + 14 &amp;&amp; ISPICKVAL( Status__c , &apos;Draft&apos;), true, false)</errorConditionFormula>
        <errorMessage>You cannot submit an emergency leave after two weeks from your start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateGreaterThanStart</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Do you have a time machine? Your PTO end date must be later than your start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Start_Date_rule</fullName>
        <active>true</active>
        <description>You cannot submit a planned leave within two weeks from Start date</description>
        <errorConditionFormula>IF(RecordType.DeveloperName == &apos;Planned&apos; &amp;&amp;  Start_Date__c &lt;   TODAY() + 14 &amp;&amp;  ISPICKVAL( Status__c , &apos;Draft&apos;) , true, false)</errorConditionFormula>
        <errorMessage>You cannot submit a planned leave within two weeks from your start date</errorMessage>
    </validationRules>
</CustomObject>